# Zava-Signal-Intelligence-Agents

./: .env.example  .gitignore  ARCHITECTURE.md  COPILOT_STUDIO_INSTRUCTIONS.md  Dockerfile  README.md  main.py  pyproject.toml
config/: stakeholders.json
docs/: ROADMAP.md  architecture.mmd  customer-email.md
scripts/: parse_trace.py  patch_sdk.py
src/: __init__.py  a2a_server.py  config.py  config_teams.py
src/agents/: __init__.py  competitor_ghost.py  enrichment.py  interactive_agent.py  interactive_tools.py  proactive_actions.py  procurement_watch.py  signal_collector.py
src/hitl/: __init__.py  content_approval.py  false_positive_filter.py  strategy_pivot.py
src/models/: __init__.py  battlecard.py  feedback.py  signal.py
src/outputs/: horizon_report.py  segment_brief.py  teams_pulse.py
src/tools/: blob_store.py  browser_automation.py  companies_house.py  find_a_tender.py  run_history.py  signal_store.py
src/workflows/: __init__.py  daily_sweep.py  feedback_loop.py  scheduled_sweep.py
tests/: conftest.py  test_a2a_server.py  test_browser_automation.py  test_companies_house.py  test_config.py  test_hitl.py  test_models.py  test_outputs.py  test_run_history.py  test_scheduled_sweep.py  test_signal_store.py
